# ChangeLog for app-admin/elektra
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2010; Michael Weber (xmw) <gentoo@xmw.de> +elektra-0.7.0.ebuild,
  +metadata.xml:
  New Ebuild for bug 63417
