@@ -1,4 +1,4 @@
 DIST elektra-0.7.0.tar.gz 1737447 RMD160 1e61efd5bc36cd90a3a4b0ecfb78e1a75c005cad SHA1 1d0aac0a654660cba0965e7b2998b3f312a9ba96 SHA256 2384de7e2339a6778e529a087efca53422620192767795ef98e516cb61a58245
-EBUILD elektra-0.7.0.ebuild 1661 RMD160 c86880e1c6dc6182eb62458278aa2d4d7fddb044 SHA1 2aa92651b2c9d80f629e0408b28c4ed09db892bd SHA256 dd42dcacc8eac2908e27467b4dac8c073649e91ef06046cd7e16bc268fd52ee9
-MISC ChangeLog 237 RMD160 7e8b009475657e0563fe6306791219bd93a49ec0 SHA1 a419d87e212737766177b1c8aef484c08d3820a9 SHA256 dbb43ddd073520394e107714e21a7c722b4274f205dc869e2e85ba16f9c9508d
+EBUILD elektra-0.7.0.ebuild 1675 RMD160 a8c48fb3852eff89b7bc673c1588ba9fb519a4ad SHA1 51fa403255ce725977172ca9bc53816c330a417b SHA256 4c8c570a2fa8e797ecc107cd12614e5b0c1425fe1ac5842b50fe9ee14373b7e8
+MISC ChangeLog 386 RMD160 af54a35ed5f77a9f478e501d0d555835c6970443 SHA1 8fe6bad538fd18f021c9743c2cbefc383e290ab3 SHA256 fbba9a90b31ce15558170eb0d0bcdfc8d7ad009f7a3ee63fae3be82ff350cb36
 MISC metadata.xml 254 RMD160 70712134bbffbdd1d847d527a78348cec9c03c77 SHA1 7b5de0251b59bf5169cb90d995161854fd3e21aa SHA256 741441e6d691145cdae1bbb22fd18579d954e9d7ff40cad6be466adfad71d096
